Fixed some issues on firefox

--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,22 @@
+body {
+	margin: 0;
+}
+
+.introduction {
+	font-size: 14pt;
+	font-family: Calibri;
+	background: #faf7e2;
+	padding: 20px;
+}
+
 .oracle-presentation {
 	margin: 20px;
 	width: 600px;
 	height: 450px;
 	border: 1px #000 solid;
 	font-family: Tahoma;
+	float: left;
+	background: #fff;
 }
 
 .oracle-slide {
@@ -32,6 +45,8 @@
 	height: 600px;
 	border: 1px #000 solid;
 	font-family: Tahoma;
+	float: left;
+	background: #fff;
 }
 
 .schemotechics-slide {
@@ -52,17 +67,17 @@
 	height: 240px;
 }
 
-.schemotechics-presentation:-webkit-full-screen,
-.schemotechics-presentation:-webkit-full-screen .slides-wrapper,
-.schemotechics-presentation:-webkit-full-screen .schemotechics-slide {
+.schemotechics-presentation.fullscreen,
+.schemotechics-presentation.fullscreen .slides-wrapper,
+.schemotechics-presentation.fullscreen .schemotechics-slide {
 	width: 100%;
 	height: 100%;
 }
-.schemotechics-presentation:-webkit-full-screen .schemotechics-slide {
+.schemotechics-presentation.fullscreen .schemotechics-slide {
 	font-size: 2em;
 }
 
-.schemotechics-presentation:-webkit-full-screen .schemotechics-mop,
-.schemotechics-presentation:-webkit-full-screen .schemotechics-mop2 {
+.schemotechics-presentation.fullscreen .schemotechics-mop,
+.schemotechics-presentation.fullscreen .schemotechics-mop2 {
 	height: auto;
 }
